feat: implement Flask backend with SQLite integration
- Added Flask REST API with endpoints to add, list, and delete network devices
- Created SQLite database schema with table for device records
- Separated database logic into database.py for better modularity
- Enabled CORS to allow frontend integration
- fix workflows lint from github

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint --rcfile=config/lint/.pylintrc inari/
+          pylint --rcfile=config/lint/.pylintrc Trafego-de-rede/
 
       - name: Run isort
         run: |
-          isort --settings-path=config/lint/setup-lint.cfg inari/
+          isort --settings-path=config/lint/setup-lint.cfg Trafego-de-rede/
