feat: add initial UI with Streamlit
- Add Streamlit interface for device registration and listing
- Add `make client` rule for running the frontend
- Include frontend dependencies in `requirements.txt`
- Fix typo in GitHub workflow configuration

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ FORMAT_CHECK_SRC="Trafego-de-rede/"
 MAKE_CONFIG_FILE="config/lint/setup-lint.cfg"
 PYLINT_CONFIG_FILE="config/lint/.pylintrc"
 
-
+#* Environment variables
+API_URL="none"
