--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint --rcfile=config/lint/.pylintrc Trafego-de-rede/
+          pylint --rcfile=config/lint/.pylintrc src/
 
       - name: Run isort
         run: |
-          isort --settings-path=config/lint/setup-lint.cfg Trafego-de-rede/
+          isort --settings-path=config/lint/setup-lint.cfg src/
